<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <SurfaceView
        android:id="@+id/camera_preview"
        android:layout_width="160sp"
        android:layout_height="120sp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnVoiceIn" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnTxtIn" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/txtSetting" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtRenew" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/txtMarker" />
        </LinearLayout>
		<!--  <ScrollView 
		    android:layout_width="match_parent"
            android:layout_height="match_parent">-->
        <LinearLayout
            android:id="@+id/sublayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
        <!-- </ScrollView>-->
    </LinearLayout>



</LinearLayout>