<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleUID" />

        <EditText
            android:id="@+id/editUID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleFTPIP" />

        <EditText
            android:id="@+id/editFtpIP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleFTPUsrName" />

        <EditText
            android:id="@+id/editFtpUsr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleFTPPass" />

        <EditText
            android:id="@+id/editFtpPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="IPAddress(MySQL):" />

        <EditText
            android:id="@+id/editMsqlIP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="MySQLUsrName:" />

        <EditText
            android:id="@+id/editMsqlUsr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="MySQLPass:" />

        <EditText
            android:id="@+id/editMsqlPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

</ScrollView>